--- a/src/components/InputWeight/InputWeight.module.css
+++ b/src/components/InputWeight/InputWeight.module.css
@@ -8,6 +8,8 @@
 	background-color: #c2c1a5;
 	width: 50vw;
 	padding-bottom: 2rem;
+	border-radius: 4px;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .form__header {
@@ -41,4 +43,14 @@
 	height: 1.5rem;
 	font-size: 1.1rem;
 	width: 12rem;
+}
+
+.form__button {
+	background-color: #36453b;
+	color: #f5f9e9;
+	font-size: 1.3rem;
+	padding: 0.5rem;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
 }
